# sord

./: CMakeLists.txt  Makefile  README.md
docs/: application_logic.md  architectural_upgrade.md  architecture.md  configurations.md  document_font_family_support.md  editor_core.md  file_opening.md  font_dropdown_selection.md  page_management.md  pdf_export_font_pipeline.md  pdf_exporter.md  saving_and_editing.md
include/app/: application.hpp  save_manager.hpp
include/editor/: document.hpp  editor.hpp  font_family.hpp  page.hpp  page_manager.hpp  style.hpp  text_run.hpp
include/exporter/: font_cache.hpp  glyph_run.hpp  pdf_exporter.hpp  shaper.hpp
include/layout/: page_layout.hpp
include/renderer/: editor_renderer.hpp  page_renderer.hpp  toolbar_renderer.hpp
include/renderer/menu/: font_manager.hpp  home_menu_renderer.hpp  insert_menu_renderer.hpp
script/: test.sh
src/: main.cpp
src/app/: application.cpp  save_manager.cpp
src/editor/: document.cpp  editor.cpp  page.cpp  page_manager.cpp
src/exporter/: font_cache.cpp  glyph_run.cpp  pdf_exporter.cpp  pdf_exporter_stub.cpp  shaper.cpp
src/layout/: page_layout.cpp
src/renderer/: editor_renderer.cpp  page_renderer.cpp  toolbar_renderer.cpp
src/renderer/menu/: font_manager.cpp  home_menu_renderer.cpp  insert_menu_renderer.cpp
tests/: document_test.cpp  test_document_backspace.cpp  test_document_insert_char.cpp  test_document_insert_newline.cpp  test_document_move_cursor.cpp  test_document_title.cpp  test_document_undo_redo.cpp  test_editor_input.cpp  test_editor_renderer.cpp  test_font_manager.cpp  test_page_basics.cpp  test_page_layout.cpp  test_page_manager_add_remove.cpp  test_page_manager_basics.cpp  test_page_manager_reorder.cpp  test_pdf_exporter.cpp  test_save_manager_path.cpp  test_save_manager_save.cpp
